small patch to allow compiling on newer Java versions